--- a/templates/lost_stuff.html
+++ b/templates/lost_stuff.html
@@ -53,13 +53,13 @@
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Description: activate to sort column ascending">Description</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Possible Location: activate to sort column ascending">Possible Location</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Possible Date of Losing: activate to sort column ascending">Possible Date of Losing<br>(YYYY-MM-DD)</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Name of Owner: activate to sort column ascending">Name of Owner</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Description: activate to sort column ascending">Description</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Possible Location: activate to sort column ascending">Possible Location</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Possible Date of Losing: activate to sort column ascending">Possible Date of Losing<br>(YYYY-MM-DD)</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 11%;" aria-label="Name of Owner: activate to sort column ascending">Name of Owner</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 16%;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
             </tr>
             </thead>
             {% for item in lostitems %}
