--- a/templates/special_student.html
+++ b/templates/special_student.html
@@ -44,11 +44,11 @@
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Subject: activate to sort column ascending">Subject</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Name of Student: activate to sort column ascending">Name of Student</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Contact Info of Student: activate to sort column ascending">Contact Info of Student</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Subject: activate to sort column ascending">Subject</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 22%;" aria-label="Name of Student: activate to sort column ascending">Name of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 32%;" aria-label="Contact Info of Student: activate to sort column ascending">Contact Info of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 14%;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 12%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
             </tr>
             </thead>
             {% for item in specialstudents %}
