fixed pattern limits

--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -39,7 +39,7 @@
                           </div>
                           <div class="form-group">
                             <label for="FinderPhone">Phone Number of person who found</label>
-                            <input class="form-control" name="FoundSomethingFinderPhone" placeholder="05xxxxxxxxx" type="tel" pattern="^(?:050|053|054|055?)\d{1}\d{7}" required>
+                            <input class="form-control" name="FoundSomethingFinderPhone" placeholder="05xxxxxxxxx" type="tel" maxlength="11" minlength="11" pattern="(?:050|053|054|055?)\d{1}\d{7}" required>
                           </div>
                           <button type="reset">Reset</button>
                           <button type="submit" formmethod="POST">Send</button>
