--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -39,43 +39,49 @@
             </div>
         </div>
 
-{% if ALLSearchedHouse %}
+    {% if ALLSearchedHouse %}
+         <br> <br>
+
+
         <table id = "SharingHouseAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
-            <tr>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">LOCATION</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">MIN RENT PRICE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">MAX RENT PRICE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">DESCRIPTION</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+            <thead>
+            <tr role="row">
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">MIN RENT PRICE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">MAX RENT PRICE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
 
             </tr>
-            {% for item in ALLSearchedHouse %}
-                <tr>
-                    <td>{{ item[0] }}</td>
-                    <td>{{ item[1] }}</td>
-                    <td>{{ item[2] }}</td>
-                    <td>
-                        <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#DescriptionModal">Description</button>
-                        <div class="modal fade" id="DescriptionModal" role="dialog">
-                             <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Description</h4>
-                                    </div>
-                                    <div class="modal-body">
-                                        <label>Description of House Criteria</label>
-                                        <p>{{ item[3] }}</p>
+            </thead>
+            <tbody>
+                {% for item in ALLSearchedHouse %}
+                    <tr role="row">
+                      <td>{{ item[0] }}</td>
+                      <td>{{ item[1] }}</td>
+                      <td>{{ item[2] }}</td>
+                        <td>
+                            <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#DescriptionModal">Description</button>
+                            <div class="modal fade" id="DescriptionModal" role="dialog">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                          <h4 class="modal-title">Description</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <label>Description of House Criteria</label>
+                                            <p>{{ item[3] }}</p>
+                                        </div>
                                     </div>
                                 </div>
-                             </div>
-                        </div>
-                    </td>
-                    <td>
-                       <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
-                         <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
-                             <div class = "modal-dialog">
-                                 <div class = "modal-content">
+                            </div>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                                <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+                                    <div class = "modal-dialog">
+                                    <div class = "modal-content">
                                          <div class="modal-header">
                                              <button type="button" class="close" data-dismiss="modal">&times;</button>
                                              <h4 class="modal-title">Profile</h4>
@@ -91,10 +97,11 @@
                                      </div>
                                  </div>
                              </div>
-                    </td>
+                        </td>
 
                 </tr>
             {% endfor %}
+            </tbody>
         </table>
     {% else %}
         <p>There are no items.</p>
