--- a/templates/sharedlessonnotes.html
+++ b/templates/sharedlessonnotes.html
@@ -41,16 +41,19 @@
     </div>
     {% if ALLSharingLessonNotes %}
         <table id = "SharingLessonNotesAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
-            <tr>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON CODE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">TEACHER NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+            <thead>
+            <tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="NAME: activate to sort column ascending">NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON NAME: activate to sort column ascending">LESSON NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON CODE: activate to sort column ascending">LESSON CODE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="TEACHER NAME: activate to sort column ascending">TEACHER NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
 
             </tr>
+            </thead>
+            <tbody>
             {% for item in ALLSharingLessonNotes %}
-                <tr>
+                <tr role="row">
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
@@ -79,6 +82,7 @@
 
                 </tr>
             {% endfor %}
+        </tbody>
         </table>
     {% else %}
         <p>There are no items.</p>
