--- a/templates/sharedlessonnotes.html
+++ b/templates/sharedlessonnotes.html
@@ -43,11 +43,11 @@
         <table id = "SharingLessonNotesAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="NAME: activate to sort column ascending">NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON NAME: activate to sort column ascending">LESSON NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON CODE: activate to sort column ascending">LESSON CODE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="TEACHER NAME: activate to sort column ascending">TEACHER NAME</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+                <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="NAME: activate to sort column ascending">NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON NAME: activate to sort column ascending">LESSON NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON CODE: activate to sort column ascending">LESSON CODE</th>
+                <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="TEACHER NAME: activate to sort column ascending">TEACHER NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
 
             </tr>
             </thead>
