--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -33,25 +33,25 @@
                         </div>
                         <button type="reset">Reset</button>
                         <button type="submit" formmethod="POST">Send</button>
-                        </form>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
 
     {% if ALLSearchedHouse %}
-         <br> <br>
+        <br> <br>
 
 
-        <table id = "SharingHouseAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+
+        <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                    <th class="sorting" tabindex="0" aria-controls="SharingHouseAnnouncementTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingHouseAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">MIN RENT PRICE</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingHouseAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">MAX RENT PRICE</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingHouseAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingHouseAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
-
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">MIN RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">MAX RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
             </tr>
             </thead>
             <tbody>
