--- a/templates/sharedbooks_announcement.html
+++ b/templates/sharedbooks_announcement.html
@@ -46,16 +46,21 @@
             </div>
         </div>
     </div>
-        {% if ALLSharingBooks %}
-        <table id = "SharingLessonNotesAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+
+    {% if ALLSharingBooks %}
+        <br><br>
+
+
+
+        <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
                 <tr role="row">
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="NAME: activate to sort column ascending">NAME</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON NAME: activate to sort column ascending">LESSON NAME</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON CODE: activate to sort column ascending">LESSON CODE</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="TYPES OF SHARE: activate to sort column ascending">TYPES OF SHARE</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="PRICE OF BOOKS: activate to sort column ascending">PRICE OF BOOKS</th>
-                    <th class="sorting" tabindex="0" aria-controls="SharingLessonNotesAnnouncementTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="NAME: activate to sort column ascending">NAME</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON NAME: activate to sort column ascending">LESSON NAME</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="LESSON CODE: activate to sort column ascending">LESSON CODE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="TYPES OF SHARE: activate to sort column ascending">TYPES OF SHARE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="PRICE OF BOOKS: activate to sort column ascending">PRICE OF BOOKS</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
 
                 </tr>
             </thead>
