add delete function to shared house page

--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -106,7 +106,7 @@
             </tbody>
         </table>
     {% else %}
-        <p>There are no items.</p>
+        <p>There Are No Searched House Announcement.</p>
     {% endif %}
 
 {%endblock %}
