--- a/templates/sharedbooks_announcement.html
+++ b/templates/sharedbooks_announcement.html
@@ -105,6 +105,6 @@
         </table>
 
     {% else %}
-        <p>There are no items.</p>
+        <p>There Are No Shared Book Announcement.</p>
     {% endif %}
 {%endblock %}
