--- a/templates/profile_sharedhouse_announcement.html
+++ b/templates/profile_sharedhouse_announcement.html
@@ -2,7 +2,7 @@
 {% block title %} Searching House{% endblock %}
 {% block content %}
 
-{% if AllYourSearchedHouseAnnouncement %}
+{% if AllYourSharedHouseAnnouncement %}
     <br> <br>
 
 
@@ -11,18 +11,20 @@
         <thead>
             <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">MIN RENT PRICE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">MAX RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="ENT PRICE: activate to sort column ascending">RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="NUMBER OF PEOPLE: activate to sort column ascending">NUMBER OF PEOPLE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="NUMBER OF ROOM: activate to sort column ascending">NUMBER OF ROOM</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 75.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
                 <th style = "width: 75.333px"></th>
             </tr>
         </thead>
         <tbody>
-            {% for item in AllYourSearchedHouseAnnouncement %}
+            {% for item in AllYourSharedHouseAnnouncement %}
                 <tr role="row">
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
+                    <td>{{ item[3] }}</td>
                     <td>
                         <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#DescriptionModal">Description</button>
                         <div class="modal fade" id="DescriptionModal" role="dialog">
@@ -34,7 +36,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <label>Description of House Criteria</label>
-                                        <p>{{ item[3] }}</p>
+                                        <p>{{ item[4] }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +59,7 @@
 				                    <div class="modal-footer">
 					                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 
-					                    <form method="post" action="{{ url_for('site.deleteSearchedHouse', id=item[4]) }}">
+					                    <form method="post" action="{{ url_for('site.deleteSharedHouse', id=item[5]) }}">
                                             <button type="submit" class="btn btn-danger btn-md">Delete</button>
 					                    </form>
 
@@ -73,7 +75,7 @@
 
 {% else %}
         <br><br>
-        <p>There Is No Your Searching House Announcement.</p>
+        <p>There Is No Your Sharing House Announcement.</p>
 {% endif %}
 
 
