--- a/templates/sharedbooks_announcement.html
+++ b/templates/sharedbooks_announcement.html
@@ -3,7 +3,9 @@
 {% block content %}
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SharedBooksAnnouncementModal">Share Book</button>
-
+    <a href="{{ url_for('site.ProfileOfSharingBooksAnnouncementPage')}}">
+        <button type="button" class="btn btn-info btn-lg">Your Announcements</button>
+    </a>
     <div class="modal fade" id="SharedBooksAnnouncementModal" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
