--- a/templates/club_activities.html
+++ b/templates/club_activities.html
@@ -69,6 +69,7 @@
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Location: activate to sort column ascending">Location</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Full Profile: activate to sort column ascending">Full Profile of Poster</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Show-Edit: activate to sort column ascending">Show Activity Page</th>
 			</tr>
 			</thead>
 
@@ -85,6 +86,11 @@
 					<td>
 						<a href="{{ url_for('site.SelectedProfilePage', username=item[11]) }}">
                             <button type="button" class="btn btn-info btn-md">Go to Profile</button>
+                        </a>
+					</td>
+					<td>
+						<a href="{{ url_for('site.SelectedClubActivity', activityId=item[12]) }}">
+                            <button type="button" class="btn btn-info btn-md">Activity Page</button>
                         </a>
 					</td>
 				</tr>
