Handler Operations created for details page  and some fix to GameFriendPage

--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -76,7 +76,7 @@
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Player Number: activate to sort column ascending">Player Number</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Full Profile: activate to sort column ascending">Full Profile of Poster</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Edit-Update: activate to sort column ascending">Edit-Update</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Show-Edit: activate to sort column ascending">Show Announce Page</th>
 			</tr>
 			</thead>
 
