--- a/templates/found_stuff_details.html
+++ b/templates/found_stuff_details.html
@@ -82,7 +82,7 @@
 
 
 	<button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
-		Delete record
+		Delete Record
 	</button>
 
 	<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
